k8s01-den1/warehouse20/plex-gooery/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-gooery
  namespace: warehouse20
  labels:
    app: plex
    instance: gooery
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: https
    targetPort: https
    port: 32400
    protocol: TCP
  selector:
    app: plex
    instance: gooery
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-gooery
  namespace: warehouse20
  labels:
    app: plex
    instance: gooery
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.plex: glob:1.*
spec:
  serviceName: plex-gooery
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: plex
      instance: gooery
  template:
    metadata:
      labels:
        app: plex
        instance: gooery
    spec:
      automountServiceAccountToken: false
      containers:
      - name: plex
        image: plexinc/pms-docker:1.19.4.2902-69560ce1e
        livenessProbe:
          initialDelaySeconds: 20
          httpGet:
            path: /identity
            port: https
        readinessProbe:
          initialDelaySeconds: 20
          httpGet:
            path: /identity
            port: https
        ports:
        - containerPort: 32400
          name: https
        - containerPort: 22
          hostPort: 8822
          name: ssh
        resources:
          requests:
            cpu: 1000m
            gpu.intel.com/i915: 1
            memory: "2Gi"
          limits:
            cpu: 4000m
            gpu.intel.com/i915: 1
            memory: "8Gi"
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /transcode
          name: tmp-storage
        - mountPath: /tmp
          name: tmp-storage
        - mountPath: /mnt/media/store01
          name: media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-gooery-data
      - name: tmp-storage
        emptyDir: {}
      - name: media
        persistentVolumeClaim:
          claimName: media-store01
