k8s01-den1/warehouse20/plex-gooery/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-gooery
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: plex
      instance: gooery
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: https
